[gd_scene load_steps=7 format=3 uid="uid://djgrk5udeo3qf"]

[ext_resource type="Script" path="res://Scenes/Cards/card_display.gd" id="2_khyc3"]
[ext_resource type="Texture2D" uid="uid://7tacfxya1l4s" path="res://Assets/Art/Cards/card_attack_pistol.png" id="3_270pp"]
[ext_resource type="FontFile" uid="uid://dmhwbe23ylg3h" path="res://Assets/m3x6.ttf" id="4_r1v1j"]
[ext_resource type="Texture2D" uid="uid://8y7g7vgj0tw1" path="res://Assets/Art/Cards/cardback.png" id="5_by1y4"]
[ext_resource type="Script" path="res://Scripts/Components/action_component.gd" id="6_k7qsh"]

[sub_resource type="FontVariation" id="FontVariation_hcqmf"]
base_font = ExtResource("4_r1v1j")
spacing_top = -4
spacing_bottom = -5

[node name="CardDisplay" type="Control"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_khyc3")

[node name="CardOffset" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 96.0
mouse_filter = 2

[node name="CardSprite" type="TextureRect" parent="CardOffset"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_270pp")

[node name="CardName" type="Label" parent="CardOffset/CardSprite"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.309804, 0.203922, 0.184314, 1)
theme_override_fonts/font = ExtResource("4_r1v1j")
text = "TestCard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardDescription" type="Label" parent="CardOffset/CardSprite"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 66.0
offset_right = 29.0
offset_bottom = 93.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.309804, 0.203922, 0.184314, 1)
theme_override_fonts/font = SubResource("FontVariation_hcqmf")
text = "This is a test card."
autowrap_mode = 2

[node name="Backside" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 24.0
offset_right = 72.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_by1y4")

[node name="BasicActionComponent" type="Node" parent="."]
script = ExtResource("6_k7qsh")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
